# opm-material

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_files.cmake  README.md  config.h.cmake  dune.module  opm-material-prereqs.cmake  opm-material.pc.in
cmake/Modules/: opm-material-prereqs.cmake
cmake/modules/: OpmMaterialMacros.cmake
debian/: changelog  control  copyright
examples/: satfunc.cpp
jenkins/: README.md  build.sh  run-norne-flow_ebos.sh  run-norne.sh
opm/material/: version.h
opm/material/common/: Exceptions.hpp  MathToolbox.hpp  Tabulated1DFunction.hpp  UniformTabulated2DFunction.hpp  UniformXTabulated2DFunction.hpp
opm/material/components/: CO2.hpp  SimpleHuDuanH2O.hpp
opm/material/constraintsolvers/: ImmiscibleFlash.hpp  NcpFlash.hpp
opm/material/densead/: DynamicEvaluation.hpp  EvaluationV.hpp  MathV.hpp
opm/material/fluidmatrixinteractions/: EclDefaultMaterial.hpp  EclEpsConfig.hpp  EclEpsGridProperties.hpp  EclEpsScalingPoints.hpp  EclEpsTwoPhaseLaw.hpp  EclEpsTwoPhaseLawParams.hpp  EclHysteresisConfig.hpp  EclHysteresisTwoPhaseLaw.hpp  EclHysteresisTwoPhaseLawParams.hpp  EclMaterialLawManager.hpp  EclMultiplexerMaterial.hpp  EclMultiplexerMaterialParams.hpp  PiecewiseLinearTwoPhaseMaterial.hpp
opm/material/fluidstates/: BlackOilFluidState.hpp
opm/material/fluidsystems/: BlackOilDefaultIndexTraits.hpp  BlackOilFluidSystem.hpp  BlackOilFluidSystemSimple.hpp
opm/material/fluidsystems/blackoilpvt/: BrineCo2Pvt.hpp  BrineCo2Pvt_impl.hpp  Co2GasPvt.hpp  Co2GasPvt_impl.hpp  ConstantCompressibilityBrinePvt.hpp  ConstantCompressibilityBrinePvt_impl.hpp  ConstantCompressibilityOilPvt.hpp  ConstantCompressibilityOilPvt_impl.hpp  ConstantCompressibilityWaterPvt.hpp  ConstantCompressibilityWaterPvt_impl.hpp  DeadOilPvt.hpp  DeadOilPvt_impl.hpp  DryGasPvt.hpp  DryGasPvt_impl.hpp  DryHumidGasPvt.hpp  DryHumidGasPvt_impl.hpp  GasPvtMultiplexer.hpp  GasPvtMultiplexer_impl.hpp  GasPvtThermal.hpp  GasPvtThermal_impl.hpp  LiveOilPvt.hpp  LiveOilPvt_impl.hpp  OilPvtMultiplexer.hpp  OilPvtMultiplexer_impl.hpp  OilPvtThermal.hpp  OilPvtThermal_impl.hpp  SolventPvt.hpp  SolventPvt_impl.hpp  WatWetGasPvt.hpp  WaterPvtMultiplexer.hpp  WaterPvtMultiplexer_impl.hpp  WaterPvtThermal.hpp  WaterPvtThermal_impl.hpp  WetGasPvt.hpp  WetGasPvt_impl.hpp  WetHumidGasPvt.hpp  WetHumidGasPvt_impl.hpp
opm/material/thermal/: EclThconrLaw.hpp  EclThermalLawManager.hpp
redhat/: opm-material.spec
tests/: test_2dtables.cpp  test_co2brinepvt.cpp  test_denseadv.cpp  test_eclblackoilfluidsystem.cpp  test_eclblackoilpvt.cpp  test_eclblackoilpvt_eval.cpp  test_eclblackoilpvt_fromdeck.cpp  test_eclmateriallawmanager.cpp  test_fluidsystems.cpp  test_localad.cpp  test_ncpflash.cpp  test_pengrobinson.cpp
